Fix overlap on iOS

--- a/src/app/components/draw-area/deck-manager/css/edit-card.module.css
+++ b/src/app/components/draw-area/deck-manager/css/edit-card.module.css
@@ -18,7 +18,7 @@
 }
 
 .importantButtons{
-    height: 265px;
+    height: 250px;
     display: flex;
     justify-content: space-between;
 }
